Added the first product page

--- a/Website/colares.html
+++ b/Website/colares.html
@@ -49,6 +49,8 @@ text-align: center;
   width: 250px;
   height: 250px;
 }
+
+
   </style>
       <link href="landing-page.min.css" rel="stylesheet">
       <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -118,7 +120,7 @@ text-align: center;
   </div>
     <div class="col-md-3">
       <div class="thumbnail">
-      <img src="cenas4.jpg" width="200" ></img>
+      <a href="colar1.html"><img src="cenas4.jpg" width="200" ></img></a>
     </div>
   </div>
     <div class="col-md-3">
