Fixed some sizing issues with the images with a tags

--- a/Website/colares.html
+++ b/Website/colares.html
@@ -49,6 +49,10 @@ text-align: center;
   width: 250px;
   height: 250px;
 }
+.row a img{
+  width: 250px;
+  height: 250px;
+}
 
 
   </style>
@@ -120,7 +124,7 @@ text-align: center;
   </div>
     <div class="col-md-3">
       <div class="thumbnail">
-      <a href="colar1.html"><img src="cenas4.jpg" width="200" ></img></a>
+      <a href="colar1.html"><img src="cenas4.jpg"></img></a>
     </div>
   </div>
     <div class="col-md-3">
@@ -138,7 +142,7 @@ text-align: center;
   <div class="row">
     <div class="col-md-3">
       <div class="thumbnail">
-      <img src="cenas.jpg" width="200" ></img>
+      <img src="cenas4.jpg" width="200" ></img>
     </div>
   </div>
     <div class="col-md-3">
