Added the contacts page

--- a/Website/contactos.html
+++ b/Website/contactos.html
@@ -49,6 +49,22 @@ form input{
   margin-top: 11px;
   margin-left: 15px;
 }
+.container .col-md-6 img{
+  padding-top: 40px;
+  margin-bottom: 20px;
+}
+.container .col-md-6 h1{
+  padding-top: 10px;
+}
+.row .col-md-1 img{
+  margin-top: 40px;
+  height: 40px;
+  width: 40px;
+}
+.row .col-md-11 h3{
+padding-top: 30px;
+font-size: 20px;
+}
 
   </style>
       <link href="landing-page.min.css" rel="stylesheet">
@@ -112,41 +128,66 @@ form input{
     <br>
     <br>
 
-<div class="center-block">
-  <img src="logo.png" class="img-responsive"></img>
-  <a href="pulseiras.html"><button type="button" class="btn btn-regular">Bem-Vindo</button></a>
-</div>
-
-
-<div class="container text-center">
-  <h2> Os nossos produtos</h2>
+<div class="container">
   <div class="row">
-    <div class="col-sm-4">
-      <a href="colares.html"><img src="cenas4.jpg" class="img-circle" id="icon"></a>
-      <h4>Colares</h4>
-      <p>Não há colares bons e baratos como estes!</p>
+    <div class="col-md-1">
+      <img class="img-responsive" src="fblogo.png">
     </div>
-    <div class="col-sm-4">
-      <a href="pulseiras.html"><img src="pulseira.jpg" class="img-circle" id="icon"></a>
-      <h4>Pulseiras</h4>
-      <p>Estão quase ao nível dos colares, comprem!</p>
+    <div class="col-md-11">
+      <a href="https://www.facebook.com/saoperolas/"><h3>Facebook</h3></a>
     </div>
-    <div class="col-sm-4">
-      <a href="brincos.html"><img src="brincos.jpg" class="img-circle" id="icon"></a>
-      <h4>Brincos</h4>
-      <p>Não é bem a minha praia mas também dou uma mão nisto</p>
-    </div>
-
-</div>
   </div>
+  <div class="row">
+    <div class="col-md-1">
+      <img class="img-responsive" src="instalogo.png">
+    </div>
+    <div class="col-md-11">
+      <a href="https://www.instagram.com/sao.perolas/?hl=pt"><h3>Instagram</h3></a>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-1">
+      <img class="img-responsive" src="gmapslogo.png">
+    </div>
+    <div class="col-md-11">
+      <a href="https://goo.gl/maps/zYQMKM3QPZ52"><h3>Rua Coronel Pereira da Silva, 2B. 1300-147 Lisboa</h3></a>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-1">
+      <img class="img-responsive" src="celllogo.png">
+    </div>
+    <div class="col-md-11">
+      <a href=""><h3>960003760</h3></a>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-1">
+      <img class="img-responsive" src="maillogo.png">
+    </div>
+    <div class="col-md-11">
+      <a href="mailto:sao.perolas.pt@gmail.com"><h3>sao.perolas.pt@gmail.com</h3></a>
+    </div>
+  </div>
+</div>
 
-  <footer><center>
-    <a href="https://www.facebook.com/saoperolas/"><img src="fblogo_1.png" width="20" height="20"></a>
-    <a href="https://www.instagram.com/sao.perolas/?hl=pt"><img src="instalogo_1.png" width="20" height="20"></a>
-    <p>São pérolas <sup>&reg;</sup>, desde 2011</p>
-  </footer></center>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-       <script src="js/bootstrap.min.js"></script>
-</body>
-</html>
+
+
+
+
+
+
+
+
+
+    <footer><center>
+      <a href="https://www.facebook.com/saoperolas/"><img src="fblogo_1.png" width="20" height="20"></a>
+      <a href="https://www.instagram.com/sao.perolas/?hl=pt"><img src="instalogo_1.png" width="20" height="20"></a>
+      <p>São pérolas <sup>&reg;</sup>, desde 2011</p>
+    </footer></center>
+
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+         <script src="js/bootstrap.min.js"></script>
+  </body>
+  </html>
