Change the number in the contacts page and the text decoration

--- a/Website/contactos.html
+++ b/Website/contactos.html
@@ -64,6 +64,8 @@ form input{
 .row .col-md-11 h3{
 padding-top: 30px;
 font-size: 20px;
+text-decoration: none;
+color: #000;
 }
 
   </style>
@@ -130,7 +132,7 @@ font-size: 20px;
 
 <div class="container">
   <div class="row">
-    <div class="col-md-1">
+    <div class="col-md-1 col-sm-2 col-xs-2">
       <img class="img-responsive" src="fblogo.png">
     </div>
     <div class="col-md-11">
@@ -138,7 +140,7 @@ font-size: 20px;
     </div>
   </div>
   <div class="row">
-    <div class="col-md-1">
+    <div class="col-md-1 col-sm-2 col-xs-2">
       <img class="img-responsive" src="instalogo.png">
     </div>
     <div class="col-md-11">
@@ -146,7 +148,7 @@ font-size: 20px;
     </div>
   </div>
   <div class="row">
-    <div class="col-md-1">
+    <div class="col-md-1 col-sm-2 col-xs-2">
       <img class="img-responsive" src="gmapslogo.png">
     </div>
     <div class="col-md-11">
@@ -154,15 +156,15 @@ font-size: 20px;
     </div>
   </div>
   <div class="row">
-    <div class="col-md-1">
+    <div class="col-md-1 col-sm-2 col-xs-2">
       <img class="img-responsive" src="celllogo.png">
     </div>
     <div class="col-md-11">
-      <a href=""><h3>960003760</h3></a>
+      <a href=""><h3>960003160</h3></a>
     </div>
   </div>
   <div class="row">
-    <div class="col-md-1">
+    <div class="col-md-1 col-sm-2 col-xs-2">
       <img class="img-responsive" src="maillogo.png">
     </div>
     <div class="col-md-11">
