Added a secont type of product page with a carousel

--- a/Website/brincos.html
+++ b/Website/brincos.html
@@ -171,7 +171,11 @@ form input{
 </div>
 
 
-
+<footer><center>
+  <a href="https://www.facebook.com/saoperolas/"><img src="fblogo_1.png" width="20" height="20"></a>
+  <a href="https://www.instagram.com/sao.perolas/?hl=pt"><img src="instalogo_1.png" width="20" height="20"></a>
+  <p>São pérolas <sup>&reg;</sup>, desde 2011</p>
+</footer></center>
 
 
 
