--- a/Website/index.html
+++ b/Website/index.html
@@ -49,6 +49,9 @@ form input{
   margin-top: 11px;
   margin-left: 15px;
 }
+footer{
+  margin-top: 10px;
+}
 
   </style>
       <link href="landing-page.min.css" rel="stylesheet">
