--- a/Website/colar2.html
+++ b/Website/colar2.html
@@ -16,6 +16,18 @@
 
   <style>
 
+  .row img{
+
+    height: 200px;
+
+  }
+
+  .row img{
+
+    margin-top: 20px;
+
+  }
+
   .pull-left img{
 
     padding-top: 4px;
@@ -40,19 +52,7 @@
 
 }
 
-.center-block h1{
 
-text-align: center;
-
-  padding-top: 20%;
-
-  font-family: arial;
-
-  font-size: 100px;
-
-  color: #ffffff;
-
-}
 
 .center-block img{
 
@@ -62,9 +62,9 @@ text-align: center;
 
   margin-right: auto;
 
-  margin-bottom: 60px;
+  margin-bottom: 30px;
 
-  margin-top: 20px;
+  padding-top: 100px;
 
   width: 300px;
 
@@ -84,27 +84,11 @@ text-align: center;
 
 }
 
-.thumbnail {
+#icon{
 
-    border: 0 none;
+  max-width: 200px;
 
-    box-shadow: none;
-
-}
-
-.row img{
-
-  width: 250px;
-
- height: 250px;
-
-}
-
-.row a img{
-
-  width: 250px;
-
-  height: 250px;
+  margin: 1% auto;
 
 }
 
@@ -115,6 +99,24 @@ form input{
   margin-left: 15px;
 
 }
+
+.container .col-md-6 img{
+
+  padding-top: 40px;
+
+  margin-bottom: 20px;
+
+}
+
+.container .col-md-6 h1{
+
+  padding-top: 10px;
+
+}
+
+
+
+
 
 
 
@@ -164,7 +166,7 @@ form input{
 
 
 
-           <!-- Draws 3 bars in navbar button when in small mode -->
+            <!-- Draws 3 bars in navbar button when in small mode -->
 
             <span class="icon-bar"></span>
 
@@ -242,130 +244,140 @@ form input{
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
 <div class="container">
 
-  <div class="row">
+  <div class="col-md-6">
 
-    <div class="col-md-3">
+    <div id="carousel-example-generic" class="carousel slide" data-interval="false">
 
-      <div class="thumbnail">
+      <!-- Indicators -->
 
-      <a href="colar2.html"><img src="cenas.jpg" width="200" ></img></a>
+      <ol class="carousel-indicators">
+
+        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+
+        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+
+        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+
+      </ol>
+
+
+
+      <!-- Wrapper for slides -->
+
+      <div class="carousel-inner" role="listbox">
+
+        <div class="item active">
+
+          <img src="cenas.jpg" class="img-responsive">
+
+          <div class="carousel-caption">
+
+
+
+          </div>
+
+        </div>
+
+        <div class="item">
+
+          <img src="cenas4.jpg" class="img-responsive">
+
+          <div class="carousel-caption">
+
+
+
+          </div>
+
+        </div>
+
+        <div class="item">
+
+          <img src="cenas4.jpg" class="img-responsive">
+
+          <div class="carousel-caption">
+
+
+
+          </div>
+
+        </div>
+
+
+
+      </div>
+
+
+
+      <!-- Controls -->
+
+      <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+
+        <span class="sr-only">Previous</span>
+
+      </a>
+
+      <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+
+        <span class="sr-only">Next</span>
+
+      </a>
 
     </div>
+
+
 
   </div>
 
-    <div class="col-md-3">
+  <div class="col-md-6">
 
-      <div class="thumbnail">
+    <h1>Colar mega fashion!</h1>
 
-      <a href="colar1.html"><img src="cenas4.jpg"></img></a>
+    <p>Comprem já este colar mega giro feito pela senhora Alexandra</p>
 
-    </div>
+    <p>20$</p>
+
+    <p><form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+
+<input type="hidden" name="cmd" value="_s-xclick">
+
+<input type="hidden" name="hosted_button_id" value="7GAKE6QLNBDWU">
+
+<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+
+<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+
+</form></p>
 
   </div>
-
-    <div class="col-md-3">
-
-      <div class="thumbnail">
-
-      <img src="brincos.jpg" width="200" ></img>
-
-    </div>
-
-  </div>
-
-    <div class="col-md-3">
-
-      <div class="thumbnail">
-
-      <img src="cenas.jpg" width="200" ></img>
-
-    </div>
 
 </div>
 
 
 
-  </div>
 
-  <div class="row">
 
-    <div class="col-md-3">
+    <footer><center>
 
-      <div class="thumbnail">
+      <a href="https://www.facebook.com/saoperolas/"><img src="fblogo_1.png" width="20" height="20"></a>
 
-      <img src="cenas4.jpg" width="200" ></img>
+      <a href="https://www.instagram.com/sao.perolas/?hl=pt"><img src="instalogo_1.png" width="20" height="20"></a>
 
-    </div>
+      <p>São pérolas <sup>&reg;</sup>, desde 2011</p>
 
-  </div>
-
-    <div class="col-md-3">
-
-      <div class="thumbnail">
-
-      <img src="cenas.jpg" width="200" ></img>
-
-    </div>
-
-  </div>
-
-    <div class="col-md-3">
-
-      <div class="thumbnail">
-
-      <img src="cenas.jpg" width="200" ></img>
-
-    </div>
-
-  </div>
-
-    <div class="col-md-3">
-
-      <div class="thumbnail">
-
-      <img src="cenas.jpg" width="200" ></img>
-
-    </div>
-
-</div>
+    </footer></center>
 
 
 
-  </div>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
-</div>
+         <script src="js/bootstrap.min.js"></script>
 
+  </body>
 
-
-
-
-
-
-
-
-
-
-
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-
-     <script src="js/bootstrap.min.js"></script>
-
-</body>
-
-</html>
+  </html>
