Added a zoom effect in the image gallery

--- a/Website/colar1.html
+++ b/Website/colar1.html
@@ -142,23 +142,12 @@ form input{
 <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 </form></p>
+<p>Partilhe nas redes socias:</p>
+<div class="addthis_inline_share_toolbox"></div>
+  </div>
   </div>
 
-
-
-
-
-
 </div>
-
-
-
-
-
-
-
-
-
 
 
     <footer><center>
@@ -169,5 +158,6 @@ form input{
 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
          <script src="js/bootstrap.min.js"></script>
+           <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5a62155273368a31"></script>
   </body>
   </html>
