--- a/Website/colar2.html
+++ b/Website/colar2.html
@@ -10,8 +10,8 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<<<<<<< HEAD
-  <title>São Pérolas |</title>
+
+  <title>São Pérolas | Colar</title>
 
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
@@ -21,14 +21,9 @@
   <link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="theme-color" content="#ffffff">
   <meta name="description" content="É uma marca registada que trabalha com as tradicionais pérolas com uma abordagem contemporânea !!">
-  <meta name="keywords" content="Colares, perolas, sao perolas, colares, são pérolas, São pérolas, São Pérolas">
+  <meta name="keywords" content="Colares, perolas, sao perolas, colares, são pérolas, São pérolas, São Pérolas, saoperolas.pt, saoperolas">
   <meta name="author" content="João Maria Janeiro">
-=======
-  <title>Testing Bootstrap</title>
 
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-
->>>>>>> e256dcbc46faf00cbcd468cb476491254896cad6
   <style>
 
   .row img{
@@ -128,7 +123,7 @@ form input{
   padding-top: 10px;
 
 }
-<<<<<<< HEAD
+
 footer{
   margin-top: 20px;
 }
@@ -136,15 +131,7 @@ footer{
     background: none !important;
     filter: progid:none !important;>
 }
-=======
 
-
-
-
-
-
-
->>>>>>> e256dcbc46faf00cbcd468cb476491254896cad6
   </style>
 
       <link href="landing-page.min.css" rel="stylesheet">
@@ -156,11 +143,9 @@ footer{
       <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
 
-
 </head>
 
 <body>
-
 
 
   <div class="container">
@@ -235,11 +220,7 @@ footer{
 
             </li>
 
-<<<<<<< HEAD
             <li><a href="contactos.html" data-toggle="tooltip" data-placement="left" title="">Contactos</a></li>
-=======
-            <li><a href="contactos.html" data-toggle="tooltip" data-placement="left" title="Contactos motherfuckkkkkkaaaaa">Contactos</a></li>
->>>>>>> e256dcbc46faf00cbcd468cb476491254896cad6
 
             <li><form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post" >
 
@@ -271,8 +252,6 @@ footer{
 
     <br>
 
-
-
 <div class="container">
 
   <div class="col-md-6">
@@ -288,21 +267,16 @@ footer{
         <li data-target="#carousel-example-generic" data-slide-to="1"></li>
 
         <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-<<<<<<< HEAD
         <li data-target="#carousel-example-generic" data-slide-to="3"></li>
         <li data-target="#carousel-example-generic" data-slide-to="4"></li>
         <li data-target="#carousel-example-generic" data-slide-to="5"></li>
-=======
->>>>>>> e256dcbc46faf00cbcd468cb476491254896cad6
 
       </ol>
-
 
 
       <!-- Wrapper for slides -->
 
       <div class="carousel-inner" role="listbox">
-<<<<<<< HEAD
         <div class="item active">
           <img src="1.jpg" class="img-responsive">
           <div class="carousel-caption">
@@ -332,43 +306,6 @@ footer{
           <img src="6.jpg" class="img-responsive">
           <div class="carousel-caption">
           </div>
-=======
-
-        <div class="item active">
-
-          <img src="cenas.jpg" class="img-responsive">
-
-          <div class="carousel-caption">
-
-
-
-          </div>
-
-        </div>
-
-        <div class="item">
-
-          <img src="cenas4.jpg" class="img-responsive">
-
-          <div class="carousel-caption">
-
-
-
-          </div>
-
-        </div>
-
-        <div class="item">
-
-          <img src="cenas4.jpg" class="img-responsive">
-
-          <div class="carousel-caption">
-
-
-
-          </div>
-
->>>>>>> e256dcbc46faf00cbcd468cb476491254896cad6
         </div>
 
 
@@ -397,8 +334,6 @@ footer{
 
     </div>
 
-
-
   </div>
 
   <div class="col-md-6">
@@ -410,24 +345,21 @@ footer{
     <p>20$</p>
 
     <p><form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
-<<<<<<< HEAD
 <input type="hidden" name="cmd" value="_s-xclick">
-<input type="hidden" name="hosted_button_id" value="HEHL9WJ24T3GW">
+<input type="hidden" name="hosted_button_id" value="T44UNGBX2888E">
+<table>
+<tr><td><input type="hidden" name="on0" value="Penduricalho">Penduricalho</td></tr><tr><td><select name="os0">
+	<option value="Cruz"><a href="colar1.html">Cruz </a></option>
+	<option value="Coração">Coração </option>
+	<option value="Folha">Folha </option>
+</select> </td></tr>
+</table>
 <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-=======
-
-<input type="hidden" name="cmd" value="_s-xclick">
-
-<input type="hidden" name="hosted_button_id" value="7GAKE6QLNBDWU">
-
-<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-
-<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-
->>>>>>> e256dcbc46faf00cbcd468cb476491254896cad6
-</form></p>
-
+</form>
+</p>
+<p>Partilhe nas redes socias:</p>
+<div class="addthis_inline_share_toolbox"></div>
   </div>
 
 </div>
@@ -435,10 +367,8 @@ footer{
 
 
 
-<<<<<<< HEAD
-=======
 
->>>>>>> e256dcbc46faf00cbcd468cb476491254896cad6
+
     <footer><center>
 
       <a href="https://www.facebook.com/saoperolas/"><img src="fblogo_1.png" width="20" height="20"></a>
@@ -451,9 +381,30 @@ footer{
 
 
 
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-
+         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
          <script src="js/bootstrap.min.js"></script>
+         <script src="js/touchswipe.min.js"></script>
+         <script>
+	$(document).ready(function() {
+
+					//Enable swiping...
+					$(".carousel-inner").swipe( {
+						//Generic swipe handler for all directions
+						swipeLeft:function(event, direction, distance, duration, fingerCount) {
+							$(this).parent().carousel('next');
+						},
+						swipeRight: function() {
+							$(this).parent().carousel('prev');
+						},
+						//Default is 75px, set to 0 for demo so any distance triggers swipe
+						threshold:0
+					});
+				});
+	</script>
+
+
+
+  <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5a62155273368a31"></script>
 
   </body>
 
