Minor changes to the code

--- a/Website/curtos.html
+++ b/Website/curtos.html
@@ -1,17 +1,10 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-
   <meta charset="utf-8">
-
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <title>São Pérolas | Colares</title>
-
+  <title>São Pérolas | Colar</title>
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
@@ -23,7 +16,6 @@
 <meta name="keywords" content="Colares, perolas, sao perolas, colares, são pérolas, São pérolas, São Pérolas">
 <meta name="author" content="João Maria Janeiro">
   <style>
-
   .pull-left img{
 
     padding-top: 4px;
@@ -172,14 +164,8 @@ form input{
 
       <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
-
-
-
 </head>
-
 <body>
-
-
 
   <div class="container">
     <!-- .navbar-fixed-top, or .navbar-fixed-bottom can be added to keep the nav bar fixed on the screen -->
@@ -216,7 +202,7 @@ form input{
                <a tabindex="-1" href="#">Colares</a>
                <ul class="dropdown-menu">
                  <li><a tabindex="-1" href="colares.html">Compridos</a></li>
-                 <li><a href="curtos.html">Curtos</a></li>
+                 <li><a href="#">Curtos</a></li>
                  <li><a href="#">Fios</a></li>
                </ul>
              </li>
@@ -241,143 +227,94 @@ form input{
     <br>
     <br>
 
-<div class="container" id="testing_py">
+<div class="container">
+  <div class="col-md-4">
 
+    <div class="thumbnail">
 
-
-    <div class="col-md-3">
-
-      <div class="thumbnail">
-
-  <a href="colar1.html"><img src="./img/colar1/1.jpg" width="1900"></img></a>
-
-    </div>
+<a href="#"><img src="./img/curto1/1.jpg"></img></a>
   </div>
 
+</div>
 
-
-    <div class="col-md-3">
-
-      <div class="thumbnail">
-
-  <a href="#"><img src="./img/colar2/1.jpg" width="1900"></img></a>
-    </div>
-
-  </div>
-
-    <div class="col-md-3">
-
-      <div class="thumbnail">
-
-  <a href="#"><img src="./img/colar3/1.jpg"></img></a>
-    </div>
-
-  </div>
-
-
-    <div class="col-md-3">
-
-      <div class="thumbnail">
-
-  <a href="#"><img src="./img/colar5/2.jpg"></img></a>
-    </div>
-
-  </div>
-
-  <div class="col-md-3">
+<div class="col-md-4">
 
   <div class="thumbnail">
 
-<a href="#"><img src="./img/colar4/2.jpg"></img></a>
+<a href="#"><img src="./img/curto5/1.jpg"></img></a>
 </div>
 
 </div>
-
-<div class="col-md-3">
+<div class="col-md-4">
 
   <div class="thumbnail">
 
-<a href="#"><img src="./img/colar4/3.jpg"></img></a>
+<a href="#"><img src="./img/curto6/1.jpg"></img></a>
 </div>
 
 </div>
 
-<div class="col-md-3">
+<div class="col-md-4">
 
   <div class="thumbnail">
 
-<a href="#"><img src="./img/colar4/4.jpg"></img></a>
+<a href="#"><img src="./img/curto2/1.jpg"></img></a>
 </div>
 
 </div>
-
-<div class="col-md-3">
+<div class="col-md-4">
 
   <div class="thumbnail">
 
-  <a href="colar2.html"><img src="./img/1.jpg"></img></a>
-
+<a href="#"><img src="./img/curto3/1.jpg"></img></a>
 </div>
 
 </div>
-
-
-
-    <div class="col-md-3">
-
-      <div class="thumbnail">
-
-  <a href="#"><img src="./img/colar6/1.jpg"></img></a>
-    </div>
-
-  </div>
-
-    <div class="col-md-3">
-
-      <div class="thumbnail">
-
-  <a href="#"><img src="./img/colar7/1.jpg"></img></a>
-    </div>
-
-  </div>
-
-    <div class="col-md-3">
-
-      <div class="thumbnail">
-
-  <a href="#"><img src="./img/colar8/1.jpg"></img></a>
-    </div>
-
-</div>
-
-
-
-<div class="col-md-3">
+<div class="col-md-4">
 
   <div class="thumbnail">
 
-  <a href="colar2.html"><img src="./img/colar9/1.jpg"></img></a>
+<a href="#"><img src="./img/curto4/1.jpg"></img></a>
+</div>
 
+</div>
+
+<div class="col-md-4">
+
+  <div class="thumbnail">
+
+<a href="#"><img src="./img/curto7/1.jpg"></img></a>
+</div>
+
+</div>
+<div class="col-md-4">
+
+  <div class="thumbnail">
+
+<a href="#"><img src="./img/curto8/1.jpg"></img></a>
+</div>
+
+</div>
+<div class="col-md-4">
+
+  <div class="thumbnail">
+
+<a href="#"><img src="./img/curto9/1.jpg"></img></a>
 </div>
 
 </div>
 
 </div>
 
-<footer><center>
 
-  <a href="https://www.facebook.com/saoperolas/"><img src="./img/fblogo_1.png" width="20" height="20"></a>
+    <footer><center>
+      <a href="https://www.facebook.com/saoperolas/"><img src="./img/fblogo_1.png" width="20" height="20"></a>
+      <a href="https://www.instagram.com/sao.perolas/?hl=pt"><img src="./img/instalogo_1.png" width="20" height="20"></a>
+      <p>São Pérolas <sup>&reg;</sup>, desde 2011</p>
+    </footer></center>
 
-  <a href="https://www.instagram.com/sao.perolas/?hl=pt"><img src="./img/instalogo_1.png" width="20" height="20"></a>
-
-  <p>São Pérolas <sup>&reg;</sup>, desde 2011</p>
-
-</footer></center>
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-
-     <script src="js/bootstrap.min.js"></script>
-
-</body>
-
-</html>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+         <script src="js/bootstrap.min.js"></script>
+           <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5a62155273368a31"></script>
+  </body>
+  </html>
